--- a/environment.yml
+++ b/environment.yml
@@ -1,8 +1,187 @@
 name: actualSnakeEnv
 channels:
+  - anaconda
+  - conda-forge
   - defaults
 dependencies:
-  - opencv
-  - tensorboard
-  - six
+  - _libgcc_mutex=0.1=main
+  - _openmp_mutex=5.1=1_gnu
+  - absl-py=2.3.1=pyhd8ed1ab_0
+  - aom=3.12.1=h7934f7d_0
+  - blas=1.0=mkl
+  - bzip2=1.0.8=h5eee18b_6
+  - c-ares=1.34.5=hef5626c_0
+  - ca-certificates=2025.9.9=h06a4308_0
+  - cairo=1.18.4=h44eff21_0
+  - certifi=2025.10.5=py313h06a4308_0
+  - cyrus-sasl=2.1.28=h1110e0f_3
+  - dav1d=1.2.1=h5eee18b_0
+  - eigen=3.4.0=hdb19cb5_0
+  - expat=2.7.1=h6a678d5_0
+  - ffmpeg=6.1.1=hc01ab50_4
+  - fontconfig=2.15.0=h2c49b7f_0
+  - freetype=2.13.3=h4a9f257_0
+  - gettext=0.21.0=hedfda30_2
+  - gflags=2.2.2=h6a678d5_1
+  - giflib=5.2.2=h5eee18b_0
+  - glog=0.5.0=h6a678d5_1
+  - graphite2=1.3.14=h295c915_1
+  - grpcio=1.71.0=py313h6a678d5_0
+  - gst-plugins-base=1.24.12=hc146dc4_1
+  - gstreamer=1.24.12=hb6d4d65_1
+  - gstreamer-orc=0.4.41=h5eee18b_0
+  - harfbuzz=10.2.0=hdfddeaa_1
+  - hdf5=1.14.5=h2b7332f_2
+  - icu=73.1=h6a678d5_0
+  - importlib-metadata=8.7.0=pyhe01879c_1
+  - intel-openmp=2025.0.0=h06a4308_1171
+  - jpeg=9f=h5ce9db8_0
+  - krb5=1.20.1=h143b758_1
+  - lame=3.100=h7b6447c_0
+  - lcms2=2.16=h92b89f2_1
+  - ld_impl_linux-64=2.44=h153f514_2
+  - leptonica=1.82.0=hfdeec58_3
+  - lerc=4.0.0=h6a678d5_0
+  - libabseil=20250127.0=cxx17_h6a678d5_0
+  - libarchive=3.8.2=h3ec8f01_0
+  - libcups=2.4.2=h252cb56_2
+  - libcurl=8.16.0=heebcbe5_0
+  - libdeflate=1.22=h5eee18b_0
+  - libdrm=2.4.124=h5eee18b_0
+  - libedit=3.1.20230828=h5eee18b_0
+  - libegl=1.7.0=h5eee18b_2
+  - libev=4.33=h7f8727e_1
+  - libevent=2.1.12=hdbd6064_1
+  - libffi=3.4.4=h6a678d5_1
+  - libgcc-ng=11.2.0=h1234567_1
+  - libgfortran-ng=11.2.0=h00389a5_1
+  - libgfortran5=11.2.0=h1234567_1
+  - libgl=1.7.0=h5eee18b_2
+  - libglib=2.84.2=h37c7471_0
+  - libglvnd=1.7.0=h5eee18b_2
+  - libglx=1.7.0=h5eee18b_2
+  - libgomp=11.2.0=h1234567_1
+  - libgrpc=1.71.0=h2d74bed_0
+  - libiconv=1.16=h5eee18b_3
+  - libidn2=2.3.8=hf80d704_0
+  - libkrb5=1.21.3=h520c7b4_4
+  - libmpdec=4.0.0=h5eee18b_0
+  - libnghttp2=1.57.0=h2d74bed_0
+  - libogg=1.3.5=h27cfd23_1
+  - libopenjpeg=2.5.4=hee96239_1
+  - libopus=1.3.1=h5eee18b_1
+  - libpciaccess=0.18=h5eee18b_0
+  - libpng=1.6.50=h2ed474d_0
+  - libpq=17.6=ha51bf15_0
+  - libprotobuf=5.29.3=h3cdef7c_1
+  - libre2-11=2024.07.02=h6a678d5_0
+  - libsodium=1.0.20=heac8642_0
+  - libssh2=1.11.1=h251f7ec_0
+  - libstdcxx-ng=11.2.0=h1234567_1
+  - libtheora=1.2.0=h32ad74f_1
+  - libtiff=4.7.0=hde9077f_0
+  - libunistring=1.3=hb25bd0a_0
+  - libuuid=1.41.5=h5eee18b_0
+  - libvorbis=1.3.7=h7b6447c_0
+  - libvpx=1.13.1=h6a678d5_0
+  - libwebp=1.3.2=h9f374a3_1
+  - libwebp-base=1.3.2=h5eee18b_1
+  - libxcb=1.17.0=h9b100fa_0
+  - libxkbcommon=1.9.1=h69220b7_0
+  - libxml2=2.13.8=hfdd30dd_0
+  - libzlib=1.3.1=hb25bd0a_0
+  - lmdb=0.9.31=hb25bd0a_0
+  - lz4-c=1.9.4=h6a678d5_1
+  - markdown=3.9=pyhd8ed1ab_0
+  - mkl=2025.0.0=hacee8c2_941
+  - mkl-service=2.5.2=py313hacdc0fc_0
+  - mkl_fft=2.1.1=py313h57662e1_0
+  - mkl_random=1.3.0=py313h23c847b_0
+  - mysql=8.4.0=h721767e_2
+  - ncurses=6.5=h7934f7d_0
+  - numpy=2.3.3=py313h720eef7_1
+  - numpy-base=2.3.3=py313h95072fd_1
+  - opencv=4.10.0=py313hbbfac4b_7
+  - openh264=2.6.0=he621ea3_0
+  - openjpeg=2.5.4=h4e0627c_1
+  - openldap=2.6.10=he9288cc_1
+  - openssl=3.0.18=hd6dcaed_0
+  - packaging=25.0=pyh29332c3_1
+  - pcre2=10.42=hebb0a14_1
+  - pip=25.2=pyhc872135_1
+  - pixman=0.46.4=h7934f7d_0
+  - protobuf=5.29.3=py313he621ea3_0
+  - pthread-stubs=0.3=h0ce48e5_1
+  - python=3.13.9=h7e8bc2b_100_cp313
+  - python_abi=3.13=1_cp313
+  - qtbase=6.7.3=hdaa5aa8_0
+  - re2=2024.07.02=hdb19cb5_0
+  - readline=8.3=hc2a1206_0
+  - setuptools=80.9.0=py313h06a4308_0
+  - six=1.17.0=py313h06a4308_0
+  - sqlite=3.50.2=hb25bd0a_1
+  - tbb=2022.0.0=hdb19cb5_0
+  - tbb-devel=2022.0.0=hdb19cb5_0
+  - tensorboard=2.20.0=pyhe01879c_0
+  - tensorboard-data-server=0.7.0=py313h52d8a92_1
+  - tesseract=5.2.0=hb0d2e87_3
+  - tk=8.6.15=h54e0aa7_0
+  - werkzeug=2.0.3=pyhd8ed1ab_1
+  - wheel=0.45.1=py313h06a4308_0
+  - xcb-util=0.4.1=h5eee18b_2
+  - xcb-util-cursor=0.1.5=h5eee18b_0
+  - xcb-util-image=0.4.0=h5eee18b_2
+  - xcb-util-renderutil=0.3.10=h5eee18b_0
+  - xkeyboard-config=2.44=h5eee18b_0
+  - xorg-libx11=1.8.12=h9b100fa_1
+  - xorg-libxau=1.0.12=h9b100fa_0
+  - xorg-libxdmcp=1.1.5=h9b100fa_0
+  - xorg-libxext=1.3.6=h9b100fa_0
+  - xorg-libxrender=0.9.12=h9b100fa_0
+  - xorg-xorgproto=2024.1=h5eee18b_1
+  - xz=5.6.4=h5eee18b_1
+  - zipp=3.23.0=pyhd8ed1ab_0
+  - zlib=1.3.1=hb25bd0a_0
+  - zstd=1.5.7=h11fc155_0
+  - pip:
+      - cloudpickle==3.1.1
+      - contourpy==1.3.3
+      - cycler==0.12.1
+      - farama-notifications==0.0.4
+      - filelock==3.20.0
+      - fonttools==4.60.1
+      - fsspec==2025.9.0
+      - gymnasium==1.2.1
+      - jinja2==3.1.6
+      - kiwisolver==1.4.9
+      - markupsafe==3.0.3
+      - matplotlib==3.10.7
+      - mpmath==1.3.0
+      - networkx==3.5
+      - nvidia-cublas-cu12==12.8.4.1
+      - nvidia-cuda-cupti-cu12==12.8.90
+      - nvidia-cuda-nvrtc-cu12==12.8.93
+      - nvidia-cuda-runtime-cu12==12.8.90
+      - nvidia-cudnn-cu12==9.10.2.21
+      - nvidia-cufft-cu12==11.3.3.83
+      - nvidia-cufile-cu12==1.13.1.3
+      - nvidia-curand-cu12==10.3.9.90
+      - nvidia-cusolver-cu12==11.7.3.90
+      - nvidia-cusparse-cu12==12.5.8.93
+      - nvidia-cusparselt-cu12==0.7.1
+      - nvidia-nccl-cu12==2.27.5
+      - nvidia-nvjitlink-cu12==12.8.93
+      - nvidia-nvshmem-cu12==3.3.20
+      - nvidia-nvtx-cu12==12.8.90
+      - pandas==2.3.3
+      - pillow==12.0.0
+      - pyparsing==3.2.5
+      - python-dateutil==2.9.0.post0
+      - pytz==2025.2
+      - stable-baselines3==2.7.0
+      - sympy==1.14.0
+      - torch==2.9.0
+      - triton==3.5.0
+      - typing-extensions==4.15.0
+      - tzdata==2025.2
 prefix: /home/user777/anaconda3/envs/actualSnakeEnv
